--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -58,10 +58,13 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: 3.12
+      
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
       - name: Run a script
         id: run_script
-        run: python .github/scripts/get_link_script.py
+        run: python scripts/get_link_script.py
 
       - name: Edit PR
         uses: actions/github-script@v7
