--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -64,7 +64,7 @@ jobs:
 
       - name: Run a script
         id: run_script
-        run: python scripts/get_link_script.py
+        run: python .github/scripts/get_link_script.py
 
       - name: Edit PR
         uses: actions/github-script@v7
