--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -74,7 +74,7 @@ jobs:
               pull_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: ${{ steps.run_script.outputs.body }}
+              body: `${{ steps.run_script.outputs.body }}`
             })
       - name: Job Summary
         run: echo "Edited description of PR"
